<resources>
    <string name="app_name">Egypt Landmarks</string>


    <string name="user_name">Your name</string>
    <string name="did_you"> Did you visit <a href="https://www.google.com.eg/maps/place/Egypt/@26.8349437,26.3820156,6z/data=!3m1!4b1!4m5!3m4!1s0x14368976c35c36e9:0x2c45a00925c4c444!8m2!3d26.820553!4d30.802498?hl=en">Egypt</a> before? if you did, continue. </string>


    <string name="_1_airport">1.On Which Airport your plane landed ?</string>
    <string name="Dubai">Dubai</string>
    <string name="Hurghada">Hurghada</string>
    <string name="Delhi">Delhi</string>
    <string name="Madrid">Madrid</string>



    <string name="_2_Egypt_seas">2. Egypt has 2 seas, Select them</string>
    <string name="Red_sea">Red Sea</string>
    <string name="caribbean_sea">Caribbean Sea</string>
    <string name="White_sea">Mediterranean Sea</string>
    <string name="Arabian_sea">Arabian Sea</string>


    <string name="_3_most">3. What are most attractive citties you have been visited in Egtpt?</string>
    <string name="Alexandria2">Alexandria</string>
    <string name="Luxor">Luxor</string>
    <string name="Paris">Paris</string>
    <string name="London">London</string>


    <string name="_4_pyramids">4. What this photo refers to?</string>
    <string name="pyramids">Pyramids of Giza</string>
    <string name="Ramsis">Ramsis Statue</string>
    <string name="sphinx">Great Sphinx </string>
    <string name="Abu_Simbel">Abu Simbel</string>

    <string name="_7_white_dessert">7. White Dessert is located at ...</string>
    <string name="Siwa">Siwa Oasis</string>
    <string name="Farafra">Farafra Oasis</string>
    <string name="Baharia">Baharia Oasis</string>
    <string name="El_Fayoum">El-Fayoum</string>

    <string name="_8_ibn">8. What this photo refers to ?</string>
    <string name="hakim">Al-Hakim Mosque</string>
    <string name="ibn_tulun">Ibn Tulun Mosque</string>
    <string name="hassan">Sultan Hassan Mosque</string>
    <string name="amr">Amr ibn al-As</string>


    <string name="_5_25Jan">5. Mention the date of youth Revolution</string>

    <string name="_6_mount_musa">6. Mount Sinai is also known as ....</string>


    <string name="submit_answer">submit answer</string>

    <string name="reset">Reset</string>

    <string name="thanks">Thank you for your visit</string>


    <string name="missinganwserQ1">Missing answer in question 1</string>
    <string name="missinganwserQ2">Missing answer in question 2</string>
    <string name="missinganwserQ3">Missing answer in question 3</string>
    <string name="missinganwserQ4">Missing answer in question 4</string>
    <string name="missinganwserQ7">Missing answer in question 7</string>
    <string name="missinganwserQ5">Missing answer in question 5</string>
    <string name="missinganwserQ6">Missing answer in question 6</string>
    <string name="missinganwserQ8">Missing answer in question 8</string>



    <string name="Jan_25">25 Jan 2011</string>

    <string name="Mount_Musa">Mount Musa</string>

    <string name="Q1isCorrect">Question 1 is correct</string>
    <string name="Q2isCorrect">Question 2 is correct</string>
    <string name="Q3isCorrect">Question 3 is correct</string>
    <string name="Q4isCorrect">Question 4 is correct</string>
    <string name="Q5isCorrect">Question 5 is correct</string>
    <string name="Q7isCorrect">Question 7 is correct</string>
    <string name="Q6isCorrect">Question 6 is correct</string>
    <string name="Q8isCorrect">Question 8 is correct</string>


    <string name="Q1isWrong">Question 1 is wrong</string>
    <string name="Q2isWrong">Question 2 is wrong</string>
    <string name="Q3isWrong">Question 3 is wrong</string>
    <string name="Q4isWrong">Question 4 is wrong</string>
    <string name="Q7isWrong">Question 7 is wrong</string>
    <string name="Q5isWrong">Question 5 is wrong</string>
    <string name="Q6isWrong">Question 6 is wrong</string>
    <string name="Q8isWrong">Question 8 is wrong</string>

    <string name="score">Score:</string>

</resources>
